# forja

./: $null  .bumpversion.cfg  .gitignore  .gitmodules  01_hola.s  CHANGELOG.md  CODE_OF_CONDUCT.md  COMANDOS.md  COMPARACION_FORJA_VS_RAVEN.md  Cargo.toml  INSTRUCCIONES.md  LICENSE.md  Makefile  NOTICE  README.md  REORGANIZACION_REPOS.md  SECURITY.md  SECURITY_TESTING.md  bench_compare_output.txt  bench_completo_output.txt  bench_vms_output.txt  build.rs  fix_vm.ps1  hola.bat  hola.fbc  hola.ps1  installer.iss  instrucciones.md  output.s  prueba_exacto.bat  test_a1_direct.fa  test_a1_directo.fa  test_a1_minimal.fa  test_a1_simple.fa  test_clase.fa  test_detalle.txt  test_fib.s  test_func.s  test_hola.s  test_if.s  (+6 more)
.cargo/: config.toml
.devcontainer/: devcontainer.json
.forja_gui_203_boton_gui/: Cargo.toml
.forja_gui_203_boton_gui/src/: main.rs
.forja_gui_cache/: Cargo.toml
.forja_gui_cache/src/: main.rs
.github/workflows/: benchmark-dashboard.yml  docs-deploy.yml  forja-assistant.yml  metrics.yml  rust.yml
106_generico_rasgo_bound_rs/: Cargo.toml
106_generico_rasgo_bound_rs/src/: main.rs
159_generador_contraseñas_rs/: Cargo.toml
159_generador_contraseñas_rs/src/: main.rs
203_boton_gui_rs/: Cargo.toml
203_boton_gui_rs/src/: main.rs
204_login_final_rs/: Cargo.toml
204_login_final_rs/src/: main.rs
benchmarks/: RESULTADOS_BENCHMARK.md  bench_clean.rs  bench_completo.rs  bench_concurrencia.fa  bench_cpython_opt.rs  bench_fa.rs  bench_ffi.fa  bench_forja_aot.fa  bench_forja_asm_heavy.s  bench_forja_heavy.fa  bench_forja_vs_python.rs  bench_forjafast.rs  bench_jit.rs  bench_jit_100k.rs  bench_llvm.fa  bench_python.py  bench_python_cpython_vs_forja.py  bench_raven.rv  bench_raven_heavy.rv  bench_rust_heavy.rs  bench_rust_native.rs  bench_rust_native_aot.rs  bench_vm.rs  bench_vms.rs  bench_vs_python.rs  debug_bytecode.rs  fib.fa  fib.html  fib.rs  fib_forja_asm.s  leibniz.fa  leibniz_10m.fa  leibniz_test.fa  run_benchmarks.ps1  run_benchmarks_heavy.ps1  speed_comparison.fa  test_simple.fa  test_simple2.fa  test_simple3.fa  test_simple4.fa
benchmarks/bench_forja_aot.rs/: Cargo.toml
benchmarks/bench_forja_aot.rs/src/: main.rs
benchmarks/bench_forja_heavy.rs/: Cargo.toml
benchmarks/bench_forja_heavy.rs/src/: main.rs
benchmarks/rust_bench/: Cargo.toml
crates/forja-android-rt/android/template/app/: build.gradle.kts
crates/forja-rt/: Cargo.toml
docs/: astro.config.mjs  package-lock.json  package.json  tsconfig.json
docs/.astro/: settings.json
docs/src/components/: forja-highlight.js
docs/src/layouts/: Layout.astro
docs/src/pages/: ejemplos.astro  errores.astro  index.astro  instalacion.astro  playground.astro  roadmap.astro  uso.astro
docs/src/pages/arquitectura/: aot.astro  ast.astro  biblioteca.astro  bytecode.astro  compiler_asm.astro  formatter.astro  jit.astro  lexer.astro  optimizer.astro  parser.astro  pipeline.astro  repl.astro  selfrun.astro  semantica.astro  transpilador.astro  uops.astro  vm.astro  vm_fast.astro  vscode.astro  wasm.astro
docs/src/pages/sintaxis/: bucles.astro  clases.astro  coincidir.astro  condicionales.astro  entrada.astro  enums.astro  funciones.astro  modulos.astro  operadores.astro  ownership.astro  tipos.astro  variables.astro
examples/: 01_hola.fa  02_variables.fa  03_tipos.fa  04_operaciones.fa  05_condicionales.fa  06_bucles.fa  07_funciones.fa  08_arrays.fa  09_strings.fa  100_rasgo_comparable.fa  100_trait_comparable.fa  101_generico_identidad.fa  102_generico_intercambiar.fa  103_generico_pila.fa  104_generico_caja.fa  105_generico_par.fa  106_generico_rasgo_bound.fa  106_generico_trait_bound.fa  107_generico_multiple.fa  108_generico_arbol.fa  109_generico_opcion.fa  10_clases.fa  110_generico_resultado.fa  111_match_enum.fa  112_match_exhaustivo.fa  113_match_patrones.fa  114_match_ignorar.fa  115_match_anidado.fa  116_select_simple.fa  117_select_timeout.fa  118_select_default.fa  119_select_multiple.fa  11_mapas.fa  120_select_trabajadores.fa  121_derive_mostrar.fa  122_derive_igualdad.fa  123_derive_multiple.fa  124_atributo_test.fa  125_atributos_personalizados.fa  126_hilo_simple.fa  (+237 more)
examples/211_login_build/: Cargo.toml
examples/211_login_build/src/: main.rs
examples/222_hot_reload/: demo_hot_reload.fa  modulo.fa
fib_rs/: Cargo.toml
fib_rs/src/: main.rs
login_app/: Cargo.toml
login_app/src/: main.rs
plans/: forja_20_optimizaciones.md  forja_analisis_ultra_serio.md  forja_compiler_plan.md  forja_engineering_analysis.md  forja_implementation_guide.md  forja_implementation_todo.md  forja_mejoras_lenguaje_nativo.md  forja_review_completo.md  forja_roadmap.md  forja_serious_lang.md  forja_vm_architecture.md  forja_vm_optimization_plan.md  forja_vulnerability_report.md  gestion-versiones.md  github-innovations.md
salida_gui/: Cargo.toml
salida_login/: Cargo.toml
salida_login/src/: main.rs
scratch/: debug_opcion.rs
scripts/: build-aar.sh  build-android.sh  build-wasm.ps1  bump-version.sh  bump.py  metrics.sh  parse-benchmarks.sh  toolchain-android.sh
src/: PLAN_FIX.md  aot.rs  ast.rs  bytecode.rs  class_descriptor.rs  compiler_asm.rs  compiler_llvm.rs  debugger.rs  diagrama.rs  error.rs  formatter.rs  fprofiler.rs  gui_nativa.rs  jit.rs  jit_engine.rs  lexer.rs  lib.rs  main.rs  module.rs  native_h2_core.rs  native_h2_tls.rs  native_registry.rs  optimizer.rs  package_config.rs  package_resolver.rs  parser.rs  prelude.rs  repl.rs  sandbox.rs  selfrun.rs  semantics.rs  symbol_table.rs  token.rs  transpiler.rs  uops.rs  vm.rs  vm_fast.rs  vm_jit.rs  vm_opt.rs
stdlib/gui/: gui.fa
stdlib/std/: aleatorio.fa  archivo.fa  cliente_h2.fa  cliente_http.fa  codificacion.fa  colecciones.fa  concurrencia.fa  fecha.fa  hash.fa  io.fa  json.fa  matematica.fa  prueba.fa  resultado.fa  servidor_h2.fa  servidor_web.fa  sistema.fa  sockets.fa  texto.fa  websocket.fa
test_inline_rs/: Cargo.toml
test_inline_rs/src/: main.rs
tests/: integration_tests.rs  module_tests.rs
ventana_app/: Cargo.toml
ventana_app/src/: main.rs
(+1 files in other folders)
