[package]
name = "forja"
version = "0.3.0"
edition = "2021"
description = "Forja (fa)"
authors = ["lococoi"]

[dependencies]
rustyline = "14"
# Sin dependencias externas - solo std de Rust
# El JSON se genera manualmente en error.rs

[[bin]]
name = "bench-fa"
path = "benchmarks/bench_fa.rs"

[[bin]]
name = "bench-vm"
path = "benchmarks/bench_vm.rs"

[[bin]]
name = "bench-compare"
path = "benchmarks/bench_forja_vs_python.rs"

[[bin]]
name = "bench-vms"
path = "benchmarks/bench_vms.rs"

[[bin]]
name = "bench-clean"
path = "benchmarks/bench_clean.rs"

[[bin]]
name = "bench-completo"
path = "benchmarks/bench_completo.rs"

[[bin]]
name = "bench-jit"
path = "benchmarks/bench_jit.rs"

[[bin]]
name = "bench-jit-100k"
path = "benchmarks/bench_jit_100k.rs"

[[bin]]
name = "bench-cpython-opt"
path = "benchmarks/bench_cpython_opt.rs"

[[bin]]
name = "bench-vs-python"
path = "benchmarks/bench_vs_python.rs"

[[bin]]
name = "bench-rust-native"
path = "benchmarks/bench_rust_native.rs"

[[bin]]
name = "bench-forjafast"
path = "benchmarks/bench_forjafast.rs"

[[bin]]
name = "debug-bytecode"
path = "benchmarks/debug_bytecode.rs"

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
