[package]
name = "forja"
version = "0.3.0"
edition = "2021"
description = "Forja (fa)"
authors = ["lococoi"]

[dependencies]
# Sin dependencias externas para el núcleo - solo std de Rust
# El JSON se genera manualmente en error.rs

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rustyline = "14"

[[bench]]
name = "bench-fa"
path = "benchmarks/bench_fa.rs"

[[bench]]
name = "bench-vm"
path = "benchmarks/bench_vm.rs"

[[bench]]
name = "bench-compare"
path = "benchmarks/bench_forja_vs_python.rs"

[[bench]]
name = "bench-vms"
path = "benchmarks/bench_vms.rs"

[[bench]]
name = "bench-clean"
path = "benchmarks/bench_clean.rs"

[[bench]]
name = "bench-completo"
path = "benchmarks/bench_completo.rs"

[[bench]]
name = "bench-jit"
path = "benchmarks/bench_jit.rs"

[[bench]]
name = "bench-jit-100k"
path = "benchmarks/bench_jit_100k.rs"

[[bench]]
name = "bench-cpython-opt"
path = "benchmarks/bench_cpython_opt.rs"

[[bench]]
name = "bench-vs-python"
path = "benchmarks/bench_vs_python.rs"

[[bench]]
name = "bench-rust-native"
path = "benchmarks/bench_rust_native.rs"

[[bench]]
name = "bench-forjafast"
path = "benchmarks/bench_forjafast.rs"

[[bench]]
name = "debug-bytecode"
path = "benchmarks/debug_bytecode.rs"

[target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
