[package]
name = "forja"
version = "0.8.4"
edition = "2021"
description = "Forja (fa) - Lenguaje de programación educativo en español"
authors = ["lococoi"]
license = "GPL-3.0-or-later"

[features]
default = []
lsp = ["tower-lsp", "tokio"]
dap = []
gui = []
h2-tls = ["rustls", "rustls-pki-types", "webpki-roots"]
all = ["lsp", "dap", "gui", "crossbeam", "h2-tls"]

[dependencies]
# Sin dependencias externas para el núcleo - solo std de Rust
# El JSON se genera manualmente en error.rs
base64 = "0.22"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam = { version = "0.8", optional = true }
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring", "std"] }
rustls-pki-types = { version = "1", optional = true }
webpki-roots = { version = "0.26", optional = true }

[dev-dependencies]
proptest = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rustyline = "14"
tower-lsp = { version = "0.20", optional = true }
tokio = { version = "1", features = ["full"], optional = true }

[[bin]]
name = "forja-lsp"
path = "src/bin/forja_lsp.rs"
required-features = ["lsp"]

[[bin]]
name = "forja-dap"
path = "src/bin/forja_dap.rs"
required-features = ["dap"]

[[bin]]
name = "fuzz_simple"
path = "src/bin/fuzz_simple.rs"

[[bench]]
name = "bench-fa"
path = "benchmarks/bench_fa.rs"

[[bench]]
name = "bench-vm"
path = "benchmarks/bench_vm.rs"

[[bench]]
name = "bench-compare"
path = "benchmarks/bench_forja_vs_python.rs"

[[bench]]
name = "bench-vms"
path = "benchmarks/bench_vms.rs"

[[bench]]
name = "bench-clean"
path = "benchmarks/bench_clean.rs"

[[bench]]
name = "bench-completo"
path = "benchmarks/bench_completo.rs"

[[bench]]
name = "bench-jit"
path = "benchmarks/bench_jit.rs"

[[bench]]
name = "bench-jit-100k"
path = "benchmarks/bench_jit_100k.rs"

[[bench]]
name = "bench-cpython-opt"
path = "benchmarks/bench_cpython_opt.rs"

[[bench]]
name = "bench-vs-python"
path = "benchmarks/bench_vs_python.rs"

[[bench]]
name = "bench-rust-native"
path = "benchmarks/bench_rust_native.rs"

[[bench]]
name = "bench-forjafast"
path = "benchmarks/bench_forjafast.rs"

[[bench]]
name = "debug-bytecode"
path = "benchmarks/debug_bytecode.rs"

[target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
winresource = "0.1"

[workspace]
members = [
    "crates/forja-gui-rt",
    "crates/forja-wasm",
    "crates/forja-wasm-gui",
    "crates/forja-rt",
    "crates/forja-android-rt",
]
exclude = [".forja_gui_cache", "fuzz"]

[patch.crates-io]
xilem = { git = "https://github.com/forja-lang/patches.git", branch = "xilem" }
masonry_winit = { git = "https://github.com/forja-lang/patches.git", branch = "masonry_winit" }
masonry = { git = "https://github.com/forja-lang/patches.git", branch = "masonry" }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
