[package]
name = "forja_211_login"
version = "0.7.0"
edition = "2021"

# Exportado por Forja (fa) desde 211_login.fa (podés ejecutar directo con 'forja ejecutar')
# https://github.com/lococoi/forja

[workspace]

[dependencies]
# GUI nativa con Xilem (framework UI reactivo con GPU)
forja-gui-rt = { path = "C:/Users/gaucho/forja/crates/forja-gui-rt" }
